--- a/week3/style.css
+++ b/week3/style.css
@@ -1,232 +1,324 @@
-body{
-    margin: 0;
-    padding: 0;
+*, *::before , *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.page-container {
-    background: url(sukunadomain.png) center center fixed;
-    background-color: rgba(255, 255, 255, 0.9);
-    background-size: cover;
-    min-height: 100vh;
-    display: flex;
+body {
+  min-height: 100vh;
+  font-size: 21px;
+  line-height: 1.3;
+  overflow: hidden;
+}
+
+.wrapper {
+  width: 300%;
+  height: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: #c8bca4;
+}
+
+section {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.mask {
+  position: absolute;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-position: center;
+  background-size: cover;
+  padding: 3rem;
+}
+
+.me .mask {
+  background-image: url(mask.png);
+}
+
+button {
+  border: 1px solid #000000;
+  color: #000000;
+  padding: 0.75rem 2rem;
+  font-weight: 700;
+  font-size: 1rem;
+  background: transparent;
+  cursor: pointer;
+  position: absolute;
+  bottom: 4rem;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 0.25rem;
+  transition: all 0.5s ease;
+}
+
+button:hover {
+  background: #fff;
+  color: #333;
+}
+
+.close {
+  width: 3rem;
+  height: 3rem;
+  color: #999;
+  position: absolute;
+  top: 3rem;
+  right: 3rem;
+  cursor: pointer;
+  z-index: 4;
+}
+
+.inner {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.bg {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 800px;
+}
+
+.me .bg {
+  background-image: url(transparentalhaitham1.png);
+  background-color: #c8bca4;
+}
+
+.text {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 50%;
+  height: 100%;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  background: #fff;
+}
+
+.text .box {
+  padding: 4rem;
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
+h3 {
+  font-size: 4rem;
+  margin-bottom: 1.5rem;
+}
+
+p {
+  color: #555;
+  margin-bottom: 1rem;
+}
+
+.transition .mask {
+  transition: transform 1s ease, opacity 1s ease;
+}
+
+.animate .mask {
+  transform: scale(10);
+  opacity: 0;
+}
+
+.transition .bg {
+  transition: background-position 1s ease;
+}
+
+.animate .bg {
+  background-position: left;
+}
+
+.transition .text {
+  transition: left 1s ease;
+}
+
+.animate .text {
+  left: 50%;
+}
+
+.animate-completed .mask {
+  display: none;
+}
+
+
+  .container {
+    width: 100vw;
+    height: 100vh;
+
+    display: grid;
+
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 135px 100px 50px 100px 300px;
+    gap: 10px;
+
+    padding: 25px;
+    box-sizing: border-box;
+  }
+
+  .header {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    border: 5px solid black;
+  }
+
+  .header img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .content-title {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    text-align: center;
+  }
+  
+  .title {
     align-items: center;
     justify-content: center;
-}
+    font-size: 80px;
+    font-family: 'Playfair Display', serif;
+    text-transform: uppercase;
+    font-weight: 900;
+    
+  }
+  
+  .content-large {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 6;
+    border: 3px solid black;
+  }
 
-.card.user-card {
-    border-top: none;
-    -webkit-box-shadow: 0 0 1px 2px rgba(0,0,0,0.05), 0 -2px 1px -2px rgba(0,0,0,0.04), 0 0 0 -1px rgba(0,0,0,0.05);
-    box-shadow: 0 0 1px 2px rgba(0,0,0,0.05), 0 -2px 1px -2px rgba(0,0,0,0.04), 0 0 0 -1px rgba(0,0,0,0.05);
-    -webkit-transition: all 150ms linear;
-    transition: all 150ms linear;
-}
+  .content-large img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
-.card {
-    border-radius: 5px;
-    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
-    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
-    border: none;
-    margin-bottom: 30px;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-
-.card .card-header {
-    background-color: transparent;
-    border-bottom: none;
-    padding: 25px;
-    border-radius: 10px;
-    display: flex; /* Add flexbox */
-    justify-content: center; /* Center align horizontally */
-    align-items: center; /* Center align vertically */
-}
-
-.card .card-header h5 {
-    margin-bottom: 0;
-    color: #ffffff;
-    font-size: 14px;
-    font-weight: 600;
-    display: inline-block;
-    line-height: 1.4;
-    text-align: center;
-}
-
-
-.card .card-header+.card-block, .card .card-header+.card-block-big {
-    padding-top: 0;
-}
-
-.user-card .card-block {
-    text-align: center;
-}
-
-.card .card-block {
-    border-radius: rounded;
-    padding: 25px;
-    border-radius: 10px;
-}
-
-.user-card .card-block .user-image {
-    position: relative;
-    margin: 0 auto;
-    display: inline-block;
-    padding: 5px;
-    width: 110px;
-    height: 110px;
-}
-
-.user-card .card-block .user-image img {
-    z-index: 20;
-    position: relative;
-    top: 5px;
-    left: 5px;
-        width: 100px;
-    height: 100px;
-}
-
-.img-radius {
-    border-radius: 100%;
-}
-
-.f-w-600 {
-    font-weight: 600;
-    color: white
-}
-
-.m-b-10 {
-    margin-bottom: 10px;
-}
-
-.m-t-25 {
-    margin-top: 25px;
-}
-
-.m-t-15 {
-    margin-top: 15px;
-}
-
-.card .card-block p {
-    line-height: 1.4;
-}
-
-.text-muted {
-    color: #ffffff!important;
-}
-
-.user-card .card-block .activity-leval li.active {
-    background-color: #2ed8d8;
-}
-
-.user-card .card-block .activity-leval li {
-    display: inline-block;
-    width: 15%;
-    height: 4px;
-    margin: 0 3px;
-    background-color: #ccc;
-}
-
-.user-card .card-block .counter-block {
-    color: #fff;
-    border-radius: 10px;
-}
-
-.counter-block .row {
-    display: flex;
-    justify-content: space-around;
-}
-
-.counter-block .col-4 {
-    display: flex;
-    flex-direction: column;
+  .content-small {
+    grid-column-start: 3;
+    grid-column-end: 4;
+  }
+  
+  .Sumeru {
+    font-family: 'Times New Roman', Times, serif;
     text-align: right;
-}
+    font-size: 50px;
+  }
 
-.counter-block .col-4 i {
-    margin-bottom: 5px; /* Adjust the margin as needed for spacing between icon and text */
-}
+  .content-small2 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    border: 3px solid black;
+  }
 
-
-
-.bg-c-blue {
-    background: rgb(2,0,36);
-    background: radial-gradient(circle, rgba(2,0,36,0.5) 3%, rgba(9,121,105,0.5) 40%, rgba(8,126,114,0.5) 69%);
-}
-
-
-.m-t-10 {
-    margin-top: 10px;
-}
-
-.p-20 {
-    padding: 20px;
-}
-
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
- }
-
-.user-card .card-block .user-social-link i {
-    font-size: 30px;
-    display: inline-block; /* Make the icons display inline */
-    width:100%;
-    margin-right: 10px; /* Adjust margin as needed for spacing between icons */
-}
-
-.text-facebook {
-    color: #3B5997;
-}
-
-.text-twitter {
-    color: #42C0FB;
-}
-
-.text-dribbble {
-    color: #ff0062;
-}
-
-.user-social-link {
-    display: flex;
-}
-
-.user-social-link .col-4 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-
-
-.user-card .card-block .user-image:before {
-    bottom: 0;
-    border-bottom-left-radius: 50px;
-    border-bottom-right-radius: 50px;
-}
-
-.user-card .card-block .user-image:after, .user-card .card-block .user-image:before {
-    content: "";
+  .content-small2 img {
     width: 100%;
-    height: 48%;
-    border: 2px solid #4099ff;
-    position: absolute;
-    left: 0;
-    z-index: 10;
-}
+    height: 100%;
+    object-fit: cover;
+  }
 
-.user-card .card-block .user-image:after {
-    top: 0;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
-}
+  .content-small3 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    border: 3px solid black;
+  }
 
-.user-card .card-block .user-image:after, .user-card .card-block .user-image:before {
-    content: "";
+  .content-small3 img {
     width: 100%;
-    height: 48%;
-    border: 2px solid #4099ff;
-    position: absolute;
-    left: 0;
-    z-index: 10;
-}
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .container2 {
+    width: 100vw;
+    height: 100vh;
+
+    display: grid;
+
+    grid-template-columns: 100px 1fr 1fr 1fr;
+    grid-template-rows: 350px 235px 135px;
+    gap: 10px;
+
+    padding: 10px;
+    box-sizing: border-box;
+  }
+
+
+  .content-horizontal {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    margin-right: 20px;
+    border: 2px solid black;
+  }
+
+  .content-horizontal img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .content-large2 {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    border: 4px solid black;
+  }
+
+  .content-large2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .content-medium2 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
+  .content-medium2a {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    padding: 10px;
+    border: 1px solid black;
+  }
+
+  .content-smallpage2 {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    border: 3px solid black;
+  }
+
+  .content-smallpage2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
