--- a/week5/style.css
+++ b/week5/style.css
@@ -1,14 +1,15 @@
-*, *::before , *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
   min-height: 100vh;
   font-size: 21px;
   line-height: 1.3;
   overflow: hidden;
+}
+
+
+*, *::before , *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .wrapper {
@@ -38,7 +39,7 @@ section {
 }
 
 .me .mask {
-  background-image: url(mask.png);
+  background-image: url(./images/mask.png);
 }
 
 button {
@@ -55,6 +56,10 @@ button {
   transform: translateX(-50%);
   border-radius: 0.25rem;
   transition: all 0.5s ease;
+}
+
+.p {
+  justify-content: center;
 }
 
 button:hover {
@@ -96,7 +101,7 @@ button:hover {
 }
 
 .me .bg {
-  background-image: url(transparentalhaitham1.png);
+  background-image: url(./images/transparentalhaitham1.png);
   background-color: #c8bca4;
 }
 
