--- a/week8/style.css
+++ b/week8/style.css
@@ -331,61 +331,12 @@ p {
   .container3 {
     width: 100vw;
     height: 100vh;
-
-    display: grid;
-
-    grid-template-columns: 300px 300px 1fr 1fr;
-    grid-template-rows: 300px 230px 180px;
-    gap: 10px;
-
     padding: 15px;
-    box-sizing: border-box;
   }
 
-  .content-horizontal2 {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    border: 2px solid black;
-  }
-
-  .content-medium3 {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    border: 2px solid black;
-  }
-
-  .content-medium3a {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    border: 2px solid black;
-  }
-
-  .content-smallpage3 {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
-    border: 2px solid black;
-  }
-
-  .content-horizontal3 {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    border: 2px solid black;
-  }
-
-  .content-horizontal3a {
-    grid-column-start: 4;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    border: 2px solid black;
+  .forms {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
   }
